# advanced-gfx-assignment

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: main_app.h
app/include/scenes/: test_scene.h
app/src/: main.cpp  main_app.cpp
app/src/scenes/: test_scene.cpp
assets/fonts/: JetBrainsMono-LICENSE.txt
assets/shaders/: hello_triangle.frag  hello_triangle.vert  pos_norm_tex.vert  simple_lighting.frag  skybox.frag  skybox.vert
engine/: CMakeLists.txt
engine/include/core/: application.h  asset_manager.h  glfw_ctx.h  input_manager.h  logger.h  mesh.h  meta.h  scene.h  window.h
engine/include/gl/: buffer.h  buffer_type_traits.h  framebuffer.h  program_interface.h  sampler.h  shader.h  textures.h  vertex_array.h
engine/include/gui/: gui_manager.h  imgui_wrapper.h  main_menu_bar.h  panel.h  utils.h
engine/include/gui/panels/: general_config.h  imgui_config.h  info.h
engine/include/render/: common.h  ogl.h  render_pass.h  render_pipeline.h  render_queue.h
engine/include/render/passes/: skybox_pass.h
engine/include/utils/: callback.h  camera_controller.h  common.h  image_rgba.h  num_cast.h  obj_parser.h
engine/src/core/: application.cpp  input_manager.cpp  logger.cpp  meta.cpp  window.cpp
engine/src/gl/: debug.cpp  program_interface.cpp  sampler.cpp  shader.cpp  shader_program.cpp  textures.cpp
engine/src/gui/: gui_manager.cpp  layout_manager.cpp  main_menu_bar.cpp  scene_panel.cpp
engine/src/gui/panels/: general_config.cpp  imgui_config.cpp  info.cpp
engine/src/render/: render_pass.cpp  render_queue.cpp
engine/src/render/passes/: opaque_pass.cpp  skybox_pass.cpp
engine/src/utils/: image_rgba.cpp  obj_parser.cpp
include/: glfw_ctx.h  logger.h  scene.h  validate.h  vendor.h
include/app/: application.h  common.h  input_manager.h  window.h
include/gl/: buffer.h  debug.h  framebuffer.h  program_interface.h  sampler.h  shader_program.h  textures.h  vertex_array.h
include/gui/: gui_manager.h  layout_manager.h  main_menu_bar.h  panel.h  scene_panel.h  styles.h  utils.h
include/gui/panels/: general_config.h  imgui_config.h  info.h
include/render/: camera.h  common.h  ogl.h  render_command.h  render_pipeline.h  render_queue.h
include/render/passes/: opaque_pass.h
include/scenes/: test_scene.h
include/utils/: bit_flags.h  camera_controller.h  common.h  enum_range.h  num_cast.h  transparent_string_hash.h  validate.h
include/wrapper/: glfw_ctx.h
shaders/: hello_triangle.frag  hello_triangle.vert  pos_norm_tex.vert  simple_lighting.frag  skybox.frag  skybox.vert
src/: logger.cpp  main.cpp  meta.cpp
src/app/: application.cpp  input_manager.cpp  window.cpp
src/gl/: debug.cpp  sampler.cpp  shader.cpp  shader_program.cpp  textures.cpp
src/gui/: gui_manager.cpp  layout_manager.cpp  main_menu_bar.cpp  scene_panel.cpp
src/gui/panels/: general_config.cpp  imgui_config.cpp  info.cpp
src/render/: camera.cpp  render_pass.cpp
src/render/passes/: opaque_pass.cpp
src/scenes/: test_scene.cpp
src/utils/: camera_controller.cpp  obj_parser.cpp
